
Bugs:
- ALL: For refunds, the "property source" 'order' referred to an Invoice\Source
  object instead of to the hosting webshops's order object/array. The property
  source 'orderSource' now no longer exists in WC.
  NOTE: This may have consequences for your field references (veldverwijzingen)
  in your advanced settings!

Refactorings:
- OC: Cache geo zones.
- WC: Use add_meta_boxes_{post_type} instead of add_meta_boxes action.

5.5.1 (2018-12-13)
------------------
Features:
- ALL: Make better use of available vat class meta data to reduce the possible
  vat types of a line.
- ALL: Make better use of available meta data (by combining them) to get the vat
  rate of a line.
- WC3: WC seems to return amounts with an increased precision (was: rounded to
  the cent. now: it seems not any longer rounded).
- WC3: Follow setting 'woocommerce_tax_based_on' to determine the country code.
- WC: Use country, city and postal code of Acumulus invoice (instead of Customer
  object) to get lookup tax rates. (this also makes
  WooCommerce\Creator::getVatRateLookupMetadataByTaxClass() work in WC2...)

Bugs:
- ALL: only use the setting that defines EU vat classes when the shop might sell
  articles subject to EU vat.
- ALL: looked up vat rate meta data may be an empty array: use empty() instead
  of isset().
- ALL: looked up vat rate may still be a single float, not necessarily an array:
  'array' type hint in Completor::metaDataHas0VatRate() is incorrect.
- ALL: allow, recognise and store empty multi-select fields on the config forms.
- ALL: notice Undefined index nature in completor.php on line 336.
- OC2/OC3: mail did not use the correct property names for the smtp settings.
- WC: PHP Fatal error:  Uncaught TypeError: Argument 1 passed to
  WooCommerce\Helpers\Token::getDataValue() must be of the type array, string
  given: only descend recursively if the property found by tokenizing on _, is a
  (data) array itself.

Refactorings: